# backend

./: pyproject.toml
.windsurf/: PLANNING.md  TASK.md
.windsurf/rules/: baitboost_rules.md
.windsurf/workflows/: baitboost_workflow.md
baitboost/: db.sqlite3  manage.py
baitboost/baitboost/: asgi.py  settings.py  urls.py  wsgi.py
baitboost/prodotti/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
baitboost/prodotti/migrations/: 0001_initial.py
