[tool.poetry]
name = "venv"
version = "0.1.0"
description = "backend dell' e-commerce baitboost"
authors = ["Salvatore Cancilla <salvocancilla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
markdown = "^3.8"
django-storages = {extras = ["s3"], version = "^1.14.6"}
django-allauth = {extras = ["socialaccount"], version = "^65.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
